Created register functionality

--- a/.env
+++ b/.env
@@ -5,3 +5,11 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://romanborysenko2702:romanborysenko2702@cluster0.724sht5.mongodb.net/test"
+
+GITHUB_ID=
+GITHUB_SECRET=
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+
+NEXTAUTH_SECRET="MY_SECRET"
