Set up authorization using Google and Github

--- a/.env
+++ b/.env
@@ -6,10 +6,10 @@
 
 DATABASE_URL="mongodb+srv://romanborysenko2702:romanborysenko2702@cluster0.724sht5.mongodb.net/test"
 
-GITHUB_ID=
-GITHUB_SECRET=
+GITHUB_ID=ae4e50a588f945f54c66
+GITHUB_SECRET=ab7d7a08d06eaaa042286cbe28fbcb361b861368
 
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+GOOGLE_CLIENT_ID=810984196555-66i81s56bc82kehd3desfin7rgusm0sd.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
 
 NEXTAUTH_SECRET="MY_SECRET"
