Created the messages functionality

--- a/.env
+++ b/.env
@@ -13,3 +13,5 @@ GOOGLE_CLIENT_ID=810984196555-66i81s56bc82kehd3desfin7rgusm0sd.apps.googleuserco
 GOOGLE_CLIENT_SECRET=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
 
 NEXTAUTH_SECRET="MY_SECRET"
+
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dhcn0hicy
