--- a/.env
+++ b/.env
@@ -15,3 +15,7 @@ GOOGLE_CLIENT_SECRET=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
 NEXTAUTH_SECRET="MY_SECRET"
 
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dhcn0hicy
+
+NEXT_PUBLIC_PUSHER_APP_KEY=dcd48e90cb8aa90ad589
+PUSHER_APP_ID=1610039
+PUSHER_SECRET=1401d6cb527a1f757bb8
